# routes/index.ts
@@ -5,11 +5,10 @@ const swaggerDocument: any = require('../swagger.json')
 const router = Router()
 
 router
-    .use('/cars'. require('./cars'))
+    .use('/cars', require('./cars'))
     .use('/clubs', require('./clubs'))
     .use('/events', require('./events'))
     .use('/api-docs', swaggerUi.serve)
     .get('/api-docs', swaggerUi.setup(swaggerDocument))
 
 module.exports = router
-
